@@ -922,10 +922,14 @@ let can_alias env path =
 type explanation = Env.t * Error.all
 exception Error of explanation
 
+type application_name =
+  | Anonymous_functor
+  | Full_application_path of Longident.t
+  | Named_leftmost_functor of Longident.t
 exception Apply_error of {
     loc : Location.t ;
     env : Env.t ;
-    lid_app : Longident.t option ;
+    app_name : application_name ;
     mty_f : module_type ;
     args : (Error.functor_arg_descr * module_type) list ;
   }
@@ -955,8 +959,8 @@ let check_functor_application_in_path
         in
         let mty_f = (Env.find_module f0_path env).md_type in
         let args = List.map prepare_arg args in
-        let lid_app = Some lid_whole_app in
-        raise (Apply_error {loc; env; lid_app; mty_f; args})
+        let app_name = Full_application_path lid_whole_app in
+        raise (Apply_error {loc; env; app_name; mty_f; args})
       else
         raise Not_found
 
